Add new strings in the Options pane to language files.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Activar caixa negra
 misc_controls = Controls
 misc_controls_joysticks = Joysticks activats
 misc_controls_threshold = Llindar del joystick:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = So
 misc_sound_range = Abast efectiu:
 misc_sound_range_low = Baix
@@ -240,6 +241,10 @@ misc_sound_number = Nombre de sons permesos:
 verbosity = Verbositat
 verbosity_warningmessages = Mostrar missatges d'advertència
 verbosity_errormessages = Mostrar missatges d'error
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Fitxers CSV
