--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Černá skříňka
 misc_controls = Ovládací prvky
 misc_controls_joysticks = Joystick
 misc_controls_threshold = Citlivost:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Zvuk
 misc_sound_range = Vzdálenostní dosah:
 misc_sound_range_low = Krátký
@@ -240,6 +241,10 @@ misc_sound_number = Počet povolených zvuků:
 verbosity = Pro vývojáře
 verbosity_warningmessages = Ukázat výstražné zprávy
 verbosity_errormessages = Ukázat chybové zprávy
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV soubory
