--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Fahrtenschreiber
 misc_controls = Steuerung
 misc_controls_joysticks = Joysticks aktiviert
 misc_controls_threshold = Empfindlichkeit:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Sound
 misc_sound_range = Reichweite:
 misc_sound_range_low = Niedrig
@@ -240,6 +241,10 @@ misc_sound_number = Anzahl gleichzeitiger Sounds:
 verbosity = Zusatzinformationen
 verbosity_warningmessages = Zeige Warnungen
 verbosity_errormessages = Zeige Fehler
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV-Dateien (*.csv)
