--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Activar caja negra
 misc_controls = Controles
 misc_controls_joysticks = Joysticks activados
 misc_controls_threshold = Umbral del joystick:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Sonido
 misc_sound_range = Rango efectivo:
 misc_sound_range_low = Bajo
@@ -240,6 +241,10 @@ misc_sound_number = Número de sonidos permitidos (simultáneos):
 verbosity = Verbosity
 verbosity_warningmessages = Mostrar mensajes de alerta
 verbosity_errormessages = Mostrar mensajes de error
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Archivos CSV
