--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Käytä mustaa laatikkoa
 misc_controls = Ohjaimet
 misc_controls_joysticks = Joystickit käytössä
 misc_controls_threshold = Joysticki(e)n herkkyys:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Ääni
 misc_sound_range = Kantama:
 misc_sound_range_low = Matala
@@ -239,6 +240,10 @@ misc_sound_number = Sallittujen äänien määrä:
 verbosity = Moniäänisyys
 verbosity_warningmessages = Näytä varoitukset
 verbosity_errormessages = Näytä virheet
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV-tiedostot
