--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Enregisteur de conduite
 misc_controls = Commandes
 misc_controls_joysticks = Support des joysticks activé
 misc_controls_threshold = Seuil joystick :
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Son
 misc_sound_range = Portée :
 misc_sound_range_low = Basse
@@ -240,6 +241,10 @@ misc_sound_number = Sons simultanés :
 verbosity = Verbosité
 verbosity_warningmessages = Affiche les messages d'avertissement
 verbosity_errormessages = Affiche les messages d'erreur
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Fichiers CSV
