--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Fekete doboz
 misc_controls = Irányítás
 misc_controls_joysticks = Joystick engedélyezése
 misc_controls_threshold = Joystick küszöb:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Hang
 misc_sound_range = Hatókör:
 misc_sound_range_low = Alacsony
@@ -239,6 +240,10 @@ misc_sound_number = Engedélyezett hangok száma:
 verbosity = Üzenetek kezelése
 verbosity_warningmessages = Figyelmeztetések megjelenítése
 verbosity_errormessages = Hibaüzenetek megjelenítése
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV fájl
