--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Abilita scatola nera
 misc_controls = Controlli
 misc_controls_joysticks = Joystick abilitati
 misc_controls_threshold = Sensibilita'
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Suono
 misc_sound_range = Range effettivo:
 misc_sound_range_low = Basso
@@ -239,6 +240,10 @@ misc_sound_number = Numero di suoni consentiti
 verbosity = Info messaggi
 verbosity_warningmessages = Mostra i messaggi di warning
 verbosity_errormessages = Mostra i messaggi d'errore
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = File CSV
