--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = ブラックボックス使用
 misc_controls = コントロール
 misc_controls_joysticks = ジョイスティック使用
 misc_controls_threshold = ジョイスティック閾値:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = サウンド
 misc_sound_range = レンジ:
 misc_sound_range_low = 低
@@ -239,6 +240,10 @@ misc_sound_number = 同時サウンド数:
 verbosity = メッセージ表示
 verbosity_warningmessages = 警告を表示
 verbosity_errormessages = エラーを表示
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSVファイル
