--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -232,6 +232,7 @@ misc_simulation_blackbox = 블랙박스 사용
 misc_controls = 조작
 misc_controls_joysticks = 조이스틱 사용
 misc_controls_threshold = 조이스틱 감도:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = 음성
 misc_sound_range = 효과 범위:
 misc_sound_range_low = 낮음
@@ -241,6 +242,10 @@ misc_sound_number = 동시 재생 음성 수:
 verbosity = 알림
 verbosity_warningmessages = 경고 메시지 표시
 verbosity_errormessages = 오류 메시지 표시
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV 노선 파일
