--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Zwarte doos inschakelen
 misc_controls = Besturing
 misc_controls_joysticks = Joysticks ingeschakeld
 misc_controls_threshold = Joystickdrempel:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Geluid
 misc_sound_range = Effectief bereik:
 misc_sound_range_low = Laag
@@ -239,6 +240,10 @@ misc_sound_number = Aantal toegestane geluiden:
 verbosity = Extra duidelijkheid
 verbosity_warningmessages = Laat waarschuwingsberichten zien
 verbosity_errormessages = Laat foutmeldingen zien
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV-bestanden
