--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Czarna skrzynka
 misc_controls = Kontrola
 misc_controls_joysticks = Joysticki włączone
 misc_controls_threshold = Czułość joysticka:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Dźwięk
 misc_sound_range = Efekty:
 misc_sound_range_low = Niskie
@@ -240,6 +241,10 @@ misc_sound_number = Liczba obsługiwanych dźwięków:
 verbosity = Komunikaty
 verbosity_warningmessages = Pokazuj Ostrzeżenia
 verbosity_errormessages = Pokazuj błedy
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Pliki CSV
