--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Permitir caixa Preta
 misc_controls = Joysticks
 misc_controls_joysticks = Ativar Joysticks
 misc_controls_threshold = Sensibilidade:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Som
 misc_sound_range = Alcance efetivo:
 misc_sound_range_low = Baixo
@@ -240,6 +241,10 @@ misc_sound_number = Número simultâneo de sons:
 verbosity = Verbosity
 verbosity_warningmessages = Show warning messages
 verbosity_errormessages = Show error messages
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Arquivos CSV
