--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Permitir caixa negra
 misc_controls = Joysticks
 misc_controls_joysticks = Joysticks activados
 misc_controls_threshold = Sensibilidade:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Som
 misc_sound_range = Alcance efectivo:
 misc_sound_range_low = Baixo
@@ -240,6 +241,10 @@ misc_sound_number = Número simultâneo de sons:
 verbosity = Verbosidade
 verbosity_warningmessages = Mostrar mensagens de aviso
 verbosity_errormessages = Mostrar mensagens de erro
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Ficheiros CSV
