--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = Activează Black Box
 misc_controls = Controale
 misc_controls_joysticks = Joystickuri activate
 misc_controls_threshold = Sensibilitate Joystick:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Sunet
 misc_sound_range = Eficienţă:
 misc_sound_range_low = Scăzut
@@ -240,6 +241,10 @@ misc_sound_number = Numarul de sunete permis:
 verbosity = Prolixitate
 verbosity_warningmessages = Arata mesajele de avertizare
 verbosity_errormessages = Arata mesajele de eroare
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Fişiere CSV
