--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -240,6 +240,7 @@ misc_simulation_blackbox = Чорна скриня
 misc_controls = Контроль
 misc_controls_joysticks = Клавіші джойстика
 misc_controls_threshold = Чутливість джойстика:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Звук
 misc_sound_range = Ефекти:
 misc_sound_range_low = Низькі
@@ -249,6 +250,10 @@ misc_sound_number = Кількість звуків:
 verbosity = Сповіщення
 verbosity_warningmessages = Показувати застереження
 verbosity_errormessages = Показувати помилки
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Файли CSV 
