--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -231,6 +231,7 @@ misc_simulation_blackbox = 启用黑匣子
 misc_controls = 控制
 misc_controls_joysticks = 启用游戏杆
 misc_controls_threshold = 游戏杆门槛：
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = 声音
 misc_sound_range = 有效范围：
 misc_sound_range_low = 近
@@ -240,6 +241,10 @@ misc_sound_number = 允许声音数量：
 verbosity = 除錯信息
 verbosity_warningmessages = 显示警告
 verbosity_errormessages = 显示错误
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = 逗号分隔文档
