--- a/openBVE/OpenBve/Data/Languages/zh-TW.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-TW.cfg
@@ -232,6 +232,7 @@ misc_simulation_blackbox = 啟用黑盒子
 misc_controls = 控制
 misc_controls_joysticks = 啟用操縱桿
 misc_controls_threshold = 操縱桿靈敏度：
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = 聲效
 misc_sound_range = 有效範圍：
 misc_sound_range_low = 近
@@ -241,6 +242,10 @@ misc_sound_number = 允許聲效數目：
 verbosity = 文字訊息
 verbosity_warningmessages = 顯示警告訊息
 verbosity_errormessages = 顯示錯誤訊息
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV 檔案
