--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Enable black box
 misc_controls = Controls
 misc_controls_joysticks = Joysticks enabled
 misc_controls_threshold = Joystick threshold:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Sound
 misc_sound_range = Effective range:
 misc_sound_range_low = Low
@@ -239,6 +240,10 @@ misc_sound_number = Number of allowed sounds:
 verbosity = Verbosity
 verbosity_warningmessages = Show warning messages
 verbosity_errormessages = Show error messages
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = CSV files
