--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -230,6 +230,7 @@ misc_simulation_blackbox = Чёрный ящик
 misc_controls = Управление
 misc_controls_joysticks = Использовать джойстик
 misc_controls_threshold = Чувствительность:
+misc_controls_ebaxis = Allow EB on brake axis
 misc_sound = Настройки звука
 misc_sound_range = Диапазон эффективности:
 misc_sound_range_low = Низкий
@@ -239,6 +240,10 @@ misc_sound_number = Количество звуков:
 verbosity = Многословность
 verbosity_warningmessages = Показать предупреждения
 verbosity_errormessages = Показать ошибки
+advanced = Advanced Options
+advanced_load_advance = Load in advance
+advanced_disable_displaylists = Disable OpenGL display lists
+advanced_timefactor = Accelerated Time Factor
 
 [dialog]
 csvfiles = Файлы CSV
