Update DE, PL and HU language files with new translated strings. Fix typo....

--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -143,7 +143,7 @@ add = Hinzufügen
 remove = Entfernen
 import = Importieren...
 export = Exportieren...
-reset = Reset to defaults
+reset = Werkseinstellungen
 up = Nach oben
 down = Nach unten
 selection = Zur Zeit ausgewählter Befehl
@@ -231,7 +231,7 @@ misc_simulation_blackbox = Fahrtenschreiber
 misc_controls = Steuerung
 misc_controls_joysticks = Joysticks aktiviert
 misc_controls_threshold = Empfindlichkeit:
-misc_controls_ebaxis = Allow EB on brake axis
+misc_controls_ebaxis = SB auf Bremsachse zulassen
 misc_sound = Sound
 misc_sound_range = Reichweite:
 misc_sound_range_low = Niedrig
@@ -241,10 +241,10 @@ misc_sound_number = Anzahl gleichzeitiger Sounds:
 verbosity = Zusatzinformationen
 verbosity_warningmessages = Zeige Warnungen
 verbosity_errormessages = Zeige Fehler
-advanced = Advanced Options
-advanced_load_advance = Load in advance
-advanced_disable_displaylists = Disable OpenGL display lists
-advanced_timefactor = Accelerated Time Factor
+advanced = Weitere Optionen
+advanced_load_advance = Lade im Voraus
+advanced_disable_displaylists = OpenGL display lists deaktivieren
+advanced_timefactor = Zeitrafferfaktor
 
 [dialog]
 csvfiles = CSV-Dateien (*.csv)
@@ -501,7 +501,7 @@ MISC_CPUMODE = Aktiviert/Deaktiviert sparsame CPU-Nutzung
 DEBUG_WIREFRAME = Aktiviert/Deaktiviert Wireframe-Darstellung
 DEBUG_NORMALS = Zeigt/Versteckt die Anzeige der Normalenvektoren
 DEBUG_BRAKE = Zeigt/Versteckt die Debug-Anzeige für die Bremsen
-ROUTE_INFORMATION = Shows or hides the route information window
+ROUTE_INFORMATION = Zeigt/versteckt das Infofenster
 
 ; ----- keys -----
 
