--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -142,7 +142,7 @@ add = Hozzáadás
 remove = Eltávolítás
 import = Importálás...
 export = Exportálás...
-reset = Reset to defaults
+reset = Visszaállítás
 up = Mozgatás felfele
 down = Mozgatás lefele
 selection = Kiválasztott parancs
@@ -230,7 +230,7 @@ misc_simulation_blackbox = Fekete doboz
 misc_controls = Irányítás
 misc_controls_joysticks = Joystick engedélyezése
 misc_controls_threshold = Joystick küszöb:
-misc_controls_ebaxis = Allow EB on brake axis
+misc_controls_ebaxis = Vészfék engedélyezése a fék tengelyen
 misc_sound = Hang
 misc_sound_range = Hatókör:
 misc_sound_range_low = Alacsony
@@ -240,10 +240,10 @@ misc_sound_number = Engedélyezett hangok száma:
 verbosity = Üzenetek kezelése
 verbosity_warningmessages = Figyelmeztetések megjelenítése
 verbosity_errormessages = Hibaüzenetek megjelenítése
-advanced = Advanced Options
-advanced_load_advance = Load in advance
-advanced_disable_displaylists = Disable OpenGL display lists
-advanced_timefactor = Accelerated Time Factor
+advanced = Haladó beállítások
+advanced_load_advance = Előre betöltés
+advanced_disable_displaylists = OpenGL display lists kikapcsolása
+advanced_timefactor = Idő gyorsítása
 
 [dialog]
 csvfiles = CSV fájl
@@ -500,7 +500,7 @@ MISC_CPUMODE = Csökkentett processzor mód be/ki kapcsolása
 DEBUG_WIREFRAME = Wireframe mód be/ki kapcsolása
 DEBUG_NORMALS = Normálvektorok megjelenítése/elrejtése
 DEBUG_BRAKE = A fékrendszer hibakereső adatainak megjelenítése/elrejtése
-ROUTE_INFORMATION = Shows or hides the route information window
+ROUTE_INFORMATION = Megjeleníti vagy elrejti a pályainformációs ablakot
 
 ; ----- keys -----
 
