--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -143,7 +143,7 @@ add = Dodaj klawisz
 remove = Usuń Klawisz
 import = Import...
 export = Eksport...
-reset = Reset to defaults
+reset = Ustawienia fabryczne
 up = Przenieś wyżej
 down = Przenieś niżej
 selection = Aktualnie wybrana komenda
@@ -231,7 +231,7 @@ misc_simulation_blackbox = Czarna skrzynka
 misc_controls = Kontrola
 misc_controls_joysticks = Joysticki włączone
 misc_controls_threshold = Czułość joysticka:
-misc_controls_ebaxis = Allow EB on brake axis
+misc_controls_ebaxis = Zezwól na hamowanie nagłe osią hamulcową
 misc_sound = Dźwięk
 misc_sound_range = Efekty:
 misc_sound_range_low = Niskie
@@ -241,10 +241,10 @@ misc_sound_number = Liczba obsługiwanych dźwięków:
 verbosity = Komunikaty
 verbosity_warningmessages = Pokazuj Ostrzeżenia
 verbosity_errormessages = Pokazuj błedy
-advanced = Advanced Options
-advanced_load_advance = Load in advance
-advanced_disable_displaylists = Disable OpenGL display lists
-advanced_timefactor = Accelerated Time Factor
+advanced = Opcje zaawansowane
+advanced_load_advance = Ładuj z góry
+advanced_disable_displaylists = Wyłącz OpenGL display lists
+advanced_timefactor = Współczynnik przyspieszenia czasu
 
 [dialog]
 csvfiles = Pliki CSV
@@ -501,7 +501,7 @@ MISC_CPUMODE = Przełączanie tryb pracy CPU
 DEBUG_WIREFRAME = Aktywacja/Dezaktywacja sitaki
 DEBUG_NORMALS = Pokaz/Ukryj vertexy
 DEBUG_BRAKE = Pokaz/ukryj system hamulców
-ROUTE_INFORMATION = Shows or hides the route information window
+ROUTE_INFORMATION = Pokazuje/ukrywa okienko z informacjami
 
 ; ----- keys -----
 
