--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -29,6 +29,16 @@ normal = 正常
 expert = 專家
 unknown = 未知
 
+[errors]
+critical_file = A critical error occured whilst parsing the [file] file
+filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
+warning = Warning:
+controls_missing = No control configuration files found.
+controls_oldversion = An older key-configuration file was found.
+controls_reset = The current key-configuration has been reset to defaults.
+controls_default_oldversion = The default key assingment file is an older version or corrupt.
+controls_default_missing = The default key assignment file does not exist.
+
 [start]
 title = 開始新遊戲
 route = 路線
