--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -26,6 +26,16 @@ normal = Normal
 expert = Expert
 unknown = Unknown
 
+[errors]
+critical_file = A critical error occured whilst parsing the [file] file
+filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
+warning = Warning:
+controls_missing = No control configuration files found.
+controls_oldversion = An older key-configuration file was found.
+controls_reset = The current key-configuration has been reset to defaults.
+controls_default_oldversion = The default key assingment file is an older version or corrupt.
+controls_default_missing = The default key assignment file does not exist.
+
 [start]
 title = Start new game
 route = Route
