More untranslateable strings https://github.com/leezer3/OpenBVE/issues/15

--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -37,6 +37,11 @@ controls_oldversion = An older key-configuration file was found.
 controls_reset = The current key-configuration has been reset to defaults.
 controls_default_oldversion = The default key assingment file is an older version or corrupt.
 controls_default_missing = The default key assignment file does not exist.
+sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
+sound_openal_context = The OpenAL context could not be created.
+sound_openal_device = The OpenAL sound device could not be opened.
+fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
+fullscreen_switch2 = Please check your fullscreen resolution settings.
 
 [start]
 title = 새 게임
