Update translations for es-ES and ca-ES language files

--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
-; Translation made by Miguel Bustos "TerryFish" based on the "joseag"'s one
-; last updated: 2011-11-03
+; last updated: 2016-01-02
+; by Markitus95
 
 [language]
 name = Español (España)
@@ -28,19 +28,18 @@ expert = Experto
 unknown = Desconocido
 
 [errors]
-critical_file = A critical error occured whilst parsing the [file] file
-filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
-warning = Warning:
-controls_missing = No control configuration files found.
-controls_oldversion = An older key-configuration file was found.
-controls_reset = The current key-configuration has been reset to defaults.
-controls_default_oldversion = The default key assingment file is an older version or corrupt.
-controls_default_missing = The default key assignment file does not exist.
-sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
-sound_openal_context = The OpenAL context could not be created.
-sound_openal_device = The OpenAL sound device could not be opened.
-fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
-fullscreen_switch2 = Please check your fullscreen resolution settings.
+critical_file = Error crítico al procesar el archivo [file]
+filesystem_invalid = La configuración del sistema de archivos es inaccesible o no válida por la siguiente razón:
+warning = Advertencia:
+controls_missing = No se encontraron archivos de configuración de controles.
+controls_oldversion = Se ha encontrado un archivo antiguo de configuración de controles.
+controls_reset = Se ha reiniciado la configuración de controles actual a los valores por defecto.
+controls_default_oldversion = El archivo de configuración de controles por defecto se encuentra en una versión antigua o está dañado.
+controls_default_missing = El archivo de configuración de controles por defecto no existe.
+sound_openal_version = Se necesita OpenAL 1.1. Parece que la versión actual es 1.0.
+sound_openal_context = No se pudo crear el contexto OpenAL.
+sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
+fullscreen_switch1 = Error al cambiar al modo de pantalla completa.
 
 [start]
 title = Nueva partida
@@ -158,7 +157,7 @@ add = Añadir
 remove = Eliminar
 import = Importar...
 export = Exportar...
-reset = Reset to defaults
+reset = Configuración por defecto
 up = Mover arriba
 down = Mover abajo
 selection = Comando seleccionado
@@ -246,7 +245,7 @@ misc_simulation_blackbox = Activar caja negra
 misc_controls = Controles
 misc_controls_joysticks = Joysticks activados
 misc_controls_threshold = Umbral del joystick:
-misc_controls_ebaxis = Allow EB on brake axis
+misc_controls_ebaxis = Activa el freno de emergencia en el eje de freno
 misc_sound = Sonido
 misc_sound_range = Rango efectivo:
 misc_sound_range_low = Bajo
@@ -256,10 +255,10 @@ misc_sound_number = Número de sonidos permitidos (simultáneos):
 verbosity = Verbosity
 verbosity_warningmessages = Mostrar mensajes de alerta
 verbosity_errormessages = Mostrar mensajes de error
-advanced = Advanced Options
-advanced_load_advance = Load in advance
-advanced_disable_displaylists = Disable OpenGL display lists
-advanced_timefactor = Accelerated Time Factor
+advanced = Opciones avanzadas
+advanced_load_advance = Precargar
+advanced_disable_displaylists = Desactivar las listas de pantalla de OpenGL
+advanced_timefactor = Factor de tiempo acelerado
 
 [dialog]
 csvfiles = Archivos CSV
@@ -516,7 +515,7 @@ MISC_CPUMODE = Cambia el modo de CPU
 DEBUG_WIREFRAME = Activa/desactiva el modo malla (wireframe)
 DEBUG_NORMALS = Muestra/esconde las normales de los vértices
 DEBUG_BRAKE = Muestra/esconde el sistema de frenado
-ROUTE_INFORMATION = Shows or hides the route information window
+ROUTE_INFORMATION = Muestra o oculta la ventana de información de la ruta
 
 ; ----- keys -----
 
