--- a/openBVE/OpenBve/OpenBve.csproj
+++ b/openBVE/OpenBve/OpenBve.csproj
@@ -115,6 +115,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="System\Functions\CrashHandler.cs" />
     <Compile Include="UserInterface\formMain.Packages.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -301,6 +302,6 @@ if %25textTemplatingPath%25=="\Microsoft Shared\TextTemplating\$(VisualStudioVer
   <Target Name="AfterBuild">
   </Target>-->
   <Target Name="BeforeBuild">
-	<Warning Text="TextTransform missing and /p:TextTransformMono=[path] not specified! Ignoring TextTransform." Condition=" '$(OS)' == 'Unix' And '$(TextTransformMono)' == '' And !Exists('/usr/lib/monodevelop/AddIns/MonoDevelop.TextTemplating/TextTransform.exe') " />
+    <Warning Text="TextTransform missing and /p:TextTransformMono=[path] not specified! Ignoring TextTransform." Condition=" '$(OS)' == 'Unix' And '$(TextTransformMono)' == '' And !Exists('/usr/lib/monodevelop/AddIns/MonoDevelop.TextTemplating/TextTransform.exe') " />
   </Target>
 </Project>
