Add option- 'Unload unused textures'

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -260,6 +260,7 @@ advanced = Opcions avançades
 advanced_load_advance = Precàrrega
 advanced_disable_displaylists = Desactiva les llistes de pantalla de l'OpenGL
 advanced_timefactor = Factor de temps accelerat
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = Fitxers CSV
