--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -259,6 +259,7 @@ advanced = Opciones avanzadas
 advanced_load_advance = Precargar
 advanced_disable_displaylists = Desactivar las listas de pantalla de OpenGL
 advanced_timefactor = Factor de tiempo acelerado
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = Archivos CSV
