--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -259,6 +259,7 @@ advanced = Haladó beállítások
 advanced_load_advance = Előre betöltés
 advanced_disable_displaylists = OpenGL display lists kikapcsolása
 advanced_timefactor = Idő gyorsítása
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = CSV fájl
