--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -260,6 +260,7 @@ advanced = Opcje zaawansowane
 advanced_load_advance = Ładuj z góry
 advanced_disable_displaylists = Wyłącz OpenGL display lists
 advanced_timefactor = Współczynnik przyspieszenia czasu
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = Pliki CSV
