--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -262,6 +262,7 @@ advanced = Advanced Options
 advanced_load_advance = Load in advance
 advanced_disable_displaylists = Disable OpenGL display lists
 advanced_timefactor = Accelerated Time Factor
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = CSV 檔案
