--- a/openBVE/OpenBve/Data/Languages/de-DE.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-DE.cfg
@@ -260,6 +260,7 @@ advanced = Weitere Optionen
 advanced_load_advance = Lade im Voraus
 advanced_disable_displaylists = OpenGL display lists deaktivieren
 advanced_timefactor = Zeitrafferfaktor
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = CSV-Dateien (*.csv)
