--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -260,6 +260,7 @@ advanced = Advanced Options
 advanced_load_advance = Load in advance
 advanced_disable_displaylists = Disable OpenGL display lists
 advanced_timefactor = Accelerated Time Factor
+advanced_unload_textures = Unload unused textures
 
 [dialog]
 csvfiles = Ficheiros CSV
