--- a/ObjectViewer/ObjectViewer.csproj
+++ b/ObjectViewer/ObjectViewer.csproj
@@ -61,7 +61,7 @@
     <Compile Include="formOptions.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formOptions.designer.cs">
+    <Compile Include="formOptions.Designer.cs">
       <DependentUpon>formOptions.cs</DependentUpon>
     </Compile>
     <Compile Include="FunctionScripts.cs" />
@@ -102,9 +102,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
-    <Reference Include="Tao.Sdl">
-      <HintPath>..\..\Tao.Sdl.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="formMessages.resx">
